@@ -2,6 +2,7 @@ package org.jembi.jempi.async_receiver;
 
 import org.apache.commons.csv.CSVFormat;
 import org.apache.commons.csv.CSVRecord;
+import org.apache.commons.io.FilenameUtils;
 import org.apache.kafka.common.serialization.Serializer;
 import org.apache.kafka.common.serialization.StringSerializer;
 import org.apache.logging.log4j.LogManager;
@@ -9,13 +10,16 @@ import org.apache.logging.log4j.Logger;
 import org.apache.logging.log4j.core.config.Configurator;
 import org.jembi.jempi.AppConfig;
 import org.jembi.jempi.shared.kafka.MyKafkaProducer;
-import org.jembi.jempi.shared.models.*;
+import org.jembi.jempi.shared.models.GlobalConstants;
+import org.jembi.jempi.shared.models.Interaction;
+import org.jembi.jempi.shared.models.InteractionEnvelop;
 import org.jembi.jempi.shared.serdes.JsonPojoSerializer;
 
 import java.io.IOException;
 import java.nio.file.*;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
+import java.util.Locale;
 import java.util.UUID;
 import java.util.concurrent.ExecutionException;
 import java.util.regex.Matcher;
@@ -29,13 +33,12 @@ public final class Main {
 
    private MyKafkaProducer<String, InteractionEnvelop> interactionEnvelopProducer;
 
-   public static void main(final String[] args)
-         throws InterruptedException, ExecutionException, IOException {
-      new Main().run();
-   }
-
    public Main() {
       Configurator.setLevel(this.getClass(), AppConfig.GET_LOG_LEVEL);
+   }
+
+   public static void main(final String[] args) throws InterruptedException, ExecutionException, IOException {
+      new Main().run();
    }
 
    @SuppressWarnings("unchecked")
@@ -51,7 +54,8 @@ public final class Main {
          final var rNumber = matcher.group("rnum");
          final var klass = matcher.group("class");
          final var dNumber = matcher.group("dnum");
-         return String.format("rec-%010d-%s-%d",
+         return String.format(Locale.ROOT,
+                              "rec-%010d-%s-%d",
                               Integer.parseInt(rNumber),
                               klass,
                               (("org".equals(klass) || "aaa".equals(klass))
@@ -63,8 +67,7 @@ public final class Main {
 
    private void sendToKafka(
          final String key,
-         final InteractionEnvelop interactionEnvelop)
-         throws InterruptedException, ExecutionException {
+         final InteractionEnvelop interactionEnvelop) throws InterruptedException, ExecutionException {
       try {
          interactionEnvelopProducer.produceSync(key, interactionEnvelop);
       } catch (NullPointerException ex) {
@@ -72,46 +75,66 @@ public final class Main {
       }
    }
 
+   private long getRowSize(final String[] values) {
+      long size = 0;
+
+      for (String str : values) {
+         if (str != null) {
+            size += 24 + (str.length() * 2L);
+         }
+      }
+      return size;
+   }
+
    private void apacheReadCSV(final String fileName)
          throws InterruptedException, ExecutionException {
       try {
-         final var reader = Files.newBufferedReader(Paths.get(fileName));
+         final var filePathUri = Paths.get(fileName);
+         final var reader = Files.newBufferedReader(filePathUri);
          final var dtf = DateTimeFormatter.ofPattern("uuuu/MM/dd HH:mm:ss");
          final var now = LocalDateTime.now();
          final var stanDate = dtf.format(now);
          final var uuid = UUID.randomUUID().toString();
+         final var tag = FilenameUtils.getBaseName(FilenameUtils.removeExtension(fileName));
 
-         final var csvParser = CSVFormat
-               .DEFAULT
-               .builder()
-               .setHeader()
-               .setSkipHeaderRecord(true)
-               .setIgnoreEmptyLines(true)
-               .setNullString(null)
-               .build()
-               .parse(reader);
+         final var csvParser = CSVFormat.DEFAULT.builder()
+                                                .setHeader()
+                                                .setSkipHeaderRecord(true)
+                                                .setIgnoreEmptyLines(true)
+                                                .setNullString(null)
+                                                .build()
+                                                .parse(reader);
 
          int index = 0;
-         sendToKafka(uuid, new InteractionEnvelop(InteractionEnvelop.ContentType.BATCH_START_SENTINEL, fileName,
-                                                  String.format("%s:%07d", stanDate, ++index), null));
+         sendToKafka(uuid,
+                     new InteractionEnvelop(InteractionEnvelop.ContentType.BATCH_START_SENTINEL,
+                                            tag,
+                                            String.format(Locale.ROOT, "%s:%07d", stanDate, ++index),
+                                            null));
          for (CSVRecord csvRecord : csvParser) {
-            sendToKafka(UUID.randomUUID().toString(),
-                        new InteractionEnvelop(InteractionEnvelop.ContentType.BATCH_INTERACTION, fileName,
-                                               String.format("%s:%07d", stanDate, ++index),
-                                               new Interaction(null,
-                                                               CustomAsyncHelper.customSourceId(csvRecord),
-                                                               CustomAsyncHelper.customUniqueInteractionData(csvRecord),
-                                                               CustomAsyncHelper.customDemographicData(csvRecord))));
+            final var interactionEnvelop = new InteractionEnvelop(InteractionEnvelop.ContentType.BATCH_INTERACTION,
+                                                                  tag,
+                                                                  String.format(Locale.ROOT, "%s:%07d", stanDate, ++index),
+                                                                  new Interaction(null,
+                                                                                  CustomAsyncHelper.customSourceId(csvRecord),
+                                                                                  CustomAsyncHelper.customUniqueInteractionData(
+                                                                                        csvRecord),
+                                                                                  CustomAsyncHelper.customDemographicData(
+                                                                                        csvRecord)));
+
+            sendToKafka(UUID.randomUUID().toString(), interactionEnvelop);
          }
-         sendToKafka(uuid, new InteractionEnvelop(InteractionEnvelop.ContentType.BATCH_END_SENTINEL, fileName,
-                                                  String.format("%s:%07d", stanDate, ++index), null));
+         sendToKafka(uuid,
+                     new InteractionEnvelop(InteractionEnvelop.ContentType.BATCH_END_SENTINEL,
+                                            tag,
+                                            String.format(Locale.ROOT, "%s:%07d", stanDate, ++index),
+                                            null));
       } catch (IOException ex) {
          LOGGER.error(ex.getLocalizedMessage(), ex);
       }
    }
 
-   private void handleEvent(final WatchEvent<?> event)
-         throws InterruptedException, ExecutionException {
+   private void handleEvent(final WatchEvent<?> event) throws InterruptedException, ExecutionException {
       WatchEvent.Kind<?> kind = event.kind();
       LOGGER.info("EVENT: {}", kind);
       if (ENTRY_CREATE.equals(kind)) {
@@ -124,7 +147,7 @@ public final class Main {
             apacheReadCSV("csv/" + filename);
          }
       } else if (ENTRY_MODIFY.equals(kind)) {
-         LOGGER.info("EVENT:{}", kind);
+         LOGGER.info("EVENT: {}", kind);
       } else if (ENTRY_DELETE.equals(kind)) {
          LOGGER.info("EVENT: {}", kind);
       }
@@ -139,23 +162,26 @@ public final class Main {
    }
 
    private void run() throws InterruptedException, ExecutionException, IOException {
-      LOGGER.info("KAFKA: {} {}",
-                  AppConfig.KAFKA_BOOTSTRAP_SERVERS,
-                  AppConfig.KAFKA_CLIENT_ID);
+      LOGGER.info("KAFKA: {} {}", AppConfig.KAFKA_BOOTSTRAP_SERVERS, AppConfig.KAFKA_CLIENT_ID);
       interactionEnvelopProducer = new MyKafkaProducer<>(AppConfig.KAFKA_BOOTSTRAP_SERVERS,
-                                                         GlobalConstants.TOPIC_INTERACTION_ASYNC_ETL,
-                                                         keySerializer(), valueSerializer(),
+                                                         GlobalConstants.TOPIC_INTERACTION_ETL,
+                                                         keySerializer(),
+                                                         valueSerializer(),
                                                          AppConfig.KAFKA_CLIENT_ID);
-      try (WatchService watcher = FileSystems.getDefault().newWatchService()) {
-         Path csvDir = Paths.get("/app/csv");
-         csvDir.register(watcher, ENTRY_CREATE, ENTRY_MODIFY, ENTRY_DELETE);
-         while (true) {
-            WatchKey key = watcher.take();
+      try (WatchService watchService = FileSystems.getDefault().newWatchService()) {
+         final var csvDir = Path.of("./csv");
+         csvDir.register(watchService, ENTRY_CREATE, ENTRY_MODIFY, ENTRY_DELETE);
+         for (;;) {
+            WatchKey key = watchService.take();
             for (WatchEvent<?> event : key.pollEvents()) {
                handleEvent(event);
             }
             key.reset();
          }
+      } catch (IOException e) {
+         LOGGER.error(e.getLocalizedMessage(), e);
+      } catch (InterruptedException e) {
+         LOGGER.warn(e.getLocalizedMessage(), e);
       }
    }
 }
